--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+ /* all common css start  */
  *{
     margin: 0%;
     padding: 0%;
  }
+  /* all common css end  */
+/* common menu start */
  ul,ol{
     list-style-type: none;
  }
@@ -9,40 +12,41 @@
     text-decoration: none;
  }
  #header{
-    padding: 20px 0;
+   padding: 25.5px 0;
  }
  #contioner{
-    width: 1140px;
-    margin: 0% auto;
+   width: 1140px;
+   margin: 0% auto;
  }
- .menu{
-     height: 100px;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
+ /* common menu end */
+ .logomenu{
+   height: 100px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
  }
- .menupart ul{
-    display: flex; 
-    transition: .4s; 
+ .menu, .menu ul{
+   display: flex;
+   align-items: center;
  }
- .menupart ul li {
-    padding: 0% 27px;
+ .menu ul li {
+   padding: 0% 27px;
  }
-  .menupart ul li a{
-    color: #474747;
-     font-family: Open Sans;
-     font-size: 20px;
-     transition: .4s;
+  .menu ul li a{
+   color: #474747;
+   font-family: Open Sans;
+   font-size: 20px;
+   transition: .4s;
   }
-  .button a{
-    background-color: #fd6e0a;
-    color: #fff;
-    padding: 20px 27px;
-    border-radius: 10%;
-    font-weight: 600;
-    font-size: 20px;
-    font-family: Open Sans;
+  #button a{
+   background-color: #FD6E0A;
+   padding: 20px 27px;
+   color: #FFFFFF;
+   font-size: 20px;
+   font-family: Open Sans;
+   font-weight: 600;
+   border-radius: 8%;
   }
-  .menupart ul li a:hover{
-   color:orange;
+  .menu ul li a:hover{
+    color: red;
   }
